buttons.sass > fixed the post overlapping when reducing width :
- right ?

--- a/_sass/buttons.sass
+++ b/_sass/buttons.sass
@@ -18,6 +18,8 @@
 	height: $button_width
 	display: flex !important
 	flex-wrap: wrap
+	// hopefully, I won't be touching this ever again ... right ?
+	word-wrap: anywhere
 
 	&:active
 
